fixing view on mobile devices

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,8 @@ html{
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
+  height: 100%;
+  overflow: hidden;
 }
 
 body {
